feat: promo done

--- a/package.json
+++ b/package.json
@@ -18,15 +18,26 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "proto:install": "npm i git+https://github.com/LAW-5/protobuf",
+    "proto:promo": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto -I=./node_modules/proto/ --ts_proto_out=src/promo/ node_modules/proto/promo.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.6.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.4.5",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
+    "pg": "^8.7.3",
+    "proto": "github:LAW-5/protobuf",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -48,6 +59,7 @@
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "ts-proto": "^1.112.2",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
